--- a/Mission06_Bagley/Views/Shared/_Layout.cshtml
+++ b/Mission06_Bagley/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MovieForm">Submit a Movie</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Collection">View Collection</a>
+                        </li>
                     </ul>
                 </div>
             </div>
